--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vicons/ionicons5": "^0.13.0",
     "crypto-js": "^4.2.0",
     "naive-ui": "^2.41.0",
+    "validator": "^13.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
